# upload-analyzer

./: .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  FORMATS.md  README.md  SETUP.md  build.sh  clippy.toml  eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.json
.agent/: AI_RULES.md  README.md
.agent/workflows/: openspec-proposal.md  rust-guidelines.md
.github/workflows/: ci.yml  main.yml
dev/: app.js  index.html
openspec/: AGENTS.md  project.md
openspec/changes/add-dead-code-detection/: design.md  proposal.md  tasks.md
openspec/changes/add-dead-code-detection/specs/code-quality/: spec.md
openspec/changes/add-deb-format/: proposal.md  tasks.md
openspec/changes/add-deb-format/specs/deb-analysis/: spec.md
openspec/changes/archive/2025-12-19-add-deb-format/: design.md
openspec/changes/archive/2025-12-19-enhance-msi-analysis/: design.md
openspec/changes/archive/2025-12-19-enhance-msi-analysis/specs/msi-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/deb-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/dmg-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/file-detection/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/msi-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/pe-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/rpm-analysis/: spec.md
openspec/changes/archive/2025-12-19-standardize-metadata/specs/typescript-integration/: spec.md
openspec/changes/archive/add-rpm-support/: design.md  proposal.md  tasks.md
openspec/changes/enhance-msi-analysis/: proposal.md  tasks.md
openspec/changes/enhance-msi-analysis/specs/msi-enhancement/: spec.md
openspec/specs/deb-analysis/: spec.md
openspec/specs/dmg-analysis/: spec.md
openspec/specs/file-detection/: spec.md
openspec/specs/msi-analysis/: spec.md
openspec/specs/pe-analysis/: spec.md
openspec/specs/rpm-analysis/: spec.md
openspec/specs/typescript-integration/: spec.md
openspec/specs/wasm-build/: spec.md
public/: app.min.js  index.html
scripts/: bundle-single.js  wasm-build.js
src/rs/: deb.rs  dmg.rs  elf.rs  lib.rs  macho.rs  msi.rs  pe.rs  rpm.rs
src/ts/: helpers.ts
src/ts/examples/: typescript-usage.ts
src/ts/types/: index.d.ts
