[package]
name = "upload-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Mitriyweb <mitriyweb@gmail.com>"]
license = "MIT"
description = "PE file analyzer compiled to WebAssembly"
repository = "https://github.com/mitriyweb/upload-analyzer"

[lib]
path = "src/rs/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
goblin = "0.8"
pelite = "0.10"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
cfb = "0.10"
plist = "1.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]


# ============================================================================
# CLIPPY LINTS FOR AI AGENTS
# ============================================================================
# These lints enforce coding standards defined in .agent/workflows/rust-guidelines.md
# AI agents MUST follow these rules when generating or modifying Rust code.
#
# Configuration:
#   - Thresholds are in clippy.toml
#   - Full guidelines in .agent/workflows/rust-guidelines.md
#   - Run: npm run lint:rust
# ============================================================================
[lints.clippy]
# Deny critical issues
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Warn on performance and style issues
inefficient_to_string = "warn"
clone_on_ref_ptr = "warn"
needless_return = "warn"
redundant_closure = "warn"
explicit_auto_deref = "warn"
manual_range_contains = "warn"

# Deny concurrency patterns (WASM is single-threaded)
future_not_send = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
mutex_atomic = "deny"

# Deny complex types (including generics)
type_complexity = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
